# conductor

./: .gitignore  CLAUDE.md  Cargo.toml  Justfile
crates/conductor-app/: Cargo.toml
crates/conductor-app/src/: app.rs  bridge.rs  main.rs  runtime.rs  theme.rs
crates/conductor-app/src/platform/: mod.rs
crates/conductor-app/src/ui/: automations.rs  jobs.rs  mod.rs  notifications.rs  schedules.rs  sidebar.rs
crates/conductor-app/src/ui/chat/: header.rs  input_bar.rs  message_list.rs  mod.rs
crates/conductor-app/src/ui/settings/: about.rs  backends.rs  channels.rs  debug.rs  general.rs  mcp.rs  mod.rs  permissions.rs  plugins.rs  schedules.rs  sessions.rs  skills.rs
crates/conductor-core/: Cargo.toml
crates/conductor-core/src/: automation.rs  commands.rs  config.rs  events.rs  git.rs  lib.rs  mcp.rs  security.rs  session.rs  skill.rs  state.rs
crates/conductor-core/src/backend/: definitions.rs  discovery.rs  mod.rs  orchestrator.rs
crates/conductor-core/src/backend/parser/: json_stream.rs  mod.rs  plain_text.rs
crates/conductor-core/src/channel/: mod.rs  slack.rs
crates/conductor-core/src/connector/: fetch.rs  mod.rs  registry.rs
crates/conductor-core/src/learning/: mod.rs  preferences.rs  signals.rs
crates/conductor-core/src/scheduler/: mod.rs  persistence.rs  pty.rs
crates/conductor-ui/: Cargo.toml
crates/conductor-ui/src/: badge.rs  chat_input.rs  colors.rs  lib.rs  search_field.rs  segmented_control.rs  suggestion_chip.rs  user_profile.rs
crates/egui-swift/: CLAUDE.md  Cargo.toml
crates/egui-swift/examples/: hello.rs  settings_app.rs
crates/egui-swift/fonts/: LICENSE.md
crates/egui-swift/src/: alert.rs  badge.rs  button.rs  button_row.rs  card.rs  chat_input.rs  colors.rs  context_menu.rs  conversation_item.rs  data_table.rs  disclosure_group.rs  divider.rs  empty_state.rs  ext.rs  form.rs  form_row.rs  form_section.rs  helpers.rs  icons.rs  image.rs  label.rs  labeled_content.rs  (+27 more)
