[package]
name = "conductor-app"
version.workspace = true
edition.workspace = true

[dependencies]
conductor-core = { path = "../conductor-core" }
conductor-ui = { path = "../conductor-ui" }

eframe = { version = "0.31", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
egui = "0.31"
egui_extras = { version = "0.31", features = ["image"] }
egui_commonmark = { version = "0.20", default-features = false }

syntect = { version = "5", default-features = false, features = ["default-fancy"] }

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

parking_lot = "0.12"
arboard = "3"
open = "5"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
