[package]
name = "conductor-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
thiserror.workspace = true

dirs = "6"
glob = "0.3"
cron = "0.15"

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros"] }
tempfile = "3"
